:lipstick: - style: alert select min height to prevent jumping if value is set

--- a/src/components/form/select/select.scss
+++ b/src/components/form/select/select.scss
@@ -3,7 +3,7 @@
   --mykn-select-padding-h: 0;
   --mykn-select-font-size: var(--typography-font-size-body-s);
   --mykn-select-line-height: var(--typography-line-height-body-s);
-  --mykn-select-min-height: 38px;
+  --mykn-select-min-height: 42px;
 
   align-items: center;
   background: var(--typography-color-background);
